--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cached_network_image: any
   cupertino_icons: ^1.0.2
   dio: ^5.2.1+1
+  dropdown_button2: ^2.3.9
   flashy_tab_bar2: ^0.0.6
   flutter:
     sdk: flutter
