--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,11 @@ dependencies:
   app_bar_with_search_switch: ^1.5.1
   awesome_dialog: ^3.1.0
   cached_network_image: any
+  csv: ^5.1.1
   cupertino_icons: ^1.0.2
   dio: ^5.2.1+1
   dropdown_button2: ^2.3.9
+  file_saver: ^0.2.9
   flashy_tab_bar2: ^0.0.6
   flutter:
     sdk: flutter
