--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   shared_preferences: ^2.1.2
   string_validator: ^1.0.0
   timeago: ^3.4.0
+  universal_html: ^2.2.4
   url_launcher: ^6.1.11
 
 dev_dependencies:
